# gstack-agents

./: .gitignore  Dockerfile  README.md  app.js  gstack-backend.spec  gstack_core.py  index.css  index.html  launch.command  requirements.txt  server.py  test_next_level.py  test_pydantic_react.py
dist-web/: app.js  index.css  index.html
logs/: ddg_debug.html  debate_log.json  project_memory.json  provider_config.json  workflow_config.json  workflow_presets.json
scripts/: migrate_logs.py
skills/architect/: SKILL.md
skills/ceo/: SKILL.md
skills/coder/: SKILL.md
skills/design_qa/: SKILL.md
skills/designer/: SKILL.md
skills/eng_manager/: SKILL.md
skills/hermes/: SKILL.md
skills/qa_lead/: SKILL.md
skills/release_engineer/: SKILL.md
skills/researcher/: SKILL.md
skills/security_auditor/: SKILL.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
workspace/: .gitignore  RELEASE_NOTES.md  index.html  package.json  product_requirements.md
