[package]
name = "gstack"
version = "1.0.0"
description = "gStack Local Virtual Eng Team Desktop Console"
authors = ["DeepMind Advanced Agentic Coding"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["api-all", "shell-sidecar"] }
