[package]
name = "gstack"
version = "1.0.0"
description = "gStack Local Virtual Eng Team Desktop Console"
authors = ["DeepMind Advanced Agentic Coding"]
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.5", features = ["shell-sidecar"] }

[features]
# by default Tauri runs with "custom-protocol" on production builds
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
